# agent-compose

./: README.md
agent-compose/: CONTRIBUTING.md  README.md  pyproject.toml
agent-compose/examples/: code-review.yaml  debate.yaml  research-pipeline.yaml
agent-compose/src/agent_compose/: __init__.py  cli.py  models.py  runner.py
agent-compose/src/agent_compose/engines/: __init__.py
agent-compose/src/agent_compose/loaders/: __init__.py  spec.py
agent-compose/src/agent_compose/tools/: __init__.py
agent-compose/tests/: test_core.py
